# HFSQL_guide

./: .env.example  .gitignore  Dockerfile  odbc.ini  pyproject.toml
notebooks/: hfsql_to_csv.ipynb  hfsql_to_parquet.ipynb
src/hfsql_guide/linux/: hfsql.py
src/hfsql_guide/settings/: credentials.py  paths.py
src/hfsql_guide/windows/: hfsql.py
