[project]
name = "hfsql-guide"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pypyodbc>=1.3.6",
]

[project.scripts]
hfsql-guide = "hfsql_guide:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
